# shodhRAG

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
app/: .gitignore  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
app/src/: App-SplitView.tsx  DailyBrief.css  DailyBrief.tsx  FolderLinking.css  FolderLinking.tsx  IndexingProgress.css  KnowledgeGraph.css  LLMSettings.tsx  LandingPage.css  LandingPage.tsx  MapView.css  MapView.tsx  SpaceCreation.css  SpaceCreation.tsx  ThemeSettings.css  ThemeSettings.tsx  generation-styles.css  index.css  main.tsx
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: agent_commands.rs  analytics_commands.rs  answer_validator.rs  artifact_store.rs  async_rag_wrapper.rs  calendar_commands.rs  chat_engine.rs  chat_history.rs  clipboard_commands.rs  context_commands.rs  conversation_commands.rs  database_commands.rs  diagnostic_commands.rs  discord_bot_commands.rs  discord_http_server.rs  doc_gen_commands.rs  document_upload_commands.rs  enhanced_rag_commands.rs  file_watcher.rs  google_drive_commands.rs  graph_commands.rs  history_commands.rs  image_upload_commands.rs  lib.rs  llm_commands.rs  llm_response.rs  main.rs  mcp_bridge.rs  mcp_commands.rs  query_rewriter.rs  rag_commands.rs  retrieval_commands.rs  search_history.rs  share_manager.rs  smart_templates.rs  snapshot_commands.rs  snapshot_manager.rs  space_commands.rs  space_manager.rs  storage_commands.rs  (+10 more)
app/src-tauri/src/mcp/: builtin_tools.rs  client.rs  mod.rs  registry.rs  transport.rs
app/src/auth/: AuthContext.tsx
app/src/components/: AgentBuilder.tsx  AgentsPanel.tsx  AnalyticsDashboard.tsx  AppSidebar.tsx  ArtifactPreviewCard.tsx  BackupManager.tsx  BotPanel.tsx  CalendarTodoPanel.tsx  ChartArtifact.tsx  CitationBadge.tsx  CitationCard.tsx  CitationFootnotes.tsx  CodeArtifact.tsx  CommandPalette.tsx  (+44 more)
crates/shodh-rag/: Cargo.toml
crates/shodh-rag/src/: config.rs  context.rs  indexing.rs  lib.rs  rag_engine.rs  space.rs  templates.rs  types.rs
crates/shodh-rag/src/agent/: activity_tracker.rs  autonomous.rs  builtin_agents.rs  calendar_indexer.rs  calendar_tools.rs  code_executor.rs  code_generation_agent.rs  context.rs  conversation_continuity.rs  crew.rs  definition.rs  dynamic_tool.rs  executor.rs  filesystem_tools.rs  metrics.rs  mod.rs  monitor.rs  orchestrator.rs  pattern_learner.rs  personal_assistant.rs  planner.rs  project_context.rs  rag_tools.rs  registry.rs  tool_loop.rs  tools.rs  workflow.rs
crates/shodh-rag/src/chat/: engine.rs  mod.rs
crates/shodh-rag/src/embeddings/: download.rs  e5.rs  mod.rs  tokenizer.rs
crates/shodh-rag/src/graph/: knowledge_graph.rs  mod.rs
crates/shodh-rag/src/llm/: bpe_tokenizer.rs  download_tokenizers.rs  external.rs  genai_provider.rs  gqa_cache.rs  hf_tokenizer.rs  llamacpp_provider.rs  local.rs  mod.rs  model_config.rs  model_manager.rs  onnx_llm.rs  onnx_llm_production.rs  onnxruntime_genai.rs  onnxruntime_genai_sys.rs  simple_external.rs  streaming.rs  tokenizer_loader.rs
crates/shodh-rag/src/memory/: mod.rs  types.rs
crates/shodh-rag/src/processing/: chunker.rs  lopdf_parser.rs  mod.rs  parser.rs  windows_ocr.rs
crates/shodh-rag/src/rag/: citation_validator.rs  context_compressor.rs  context_optimizer.rs  conversation_summarizer.rs  eval.rs  form_exporter.rs  llm_router.rs  metadata.rs  mod.rs  query_decomposer.rs  query_rewriter.rs  retrieval_decision.rs  structured_output.rs  system_context.rs
crates/shodh-rag/src/reranking/: cross_encoder.rs  llm_reranker.rs  mod.rs
crates/shodh-rag/src/search/: hybrid.rs  mod.rs  text_search.rs
crates/shodh-rag/src/storage/: lance_store.rs  mod.rs
crates/shodh-rag/src/system/: command_executor.rs  file_ops.rs  mod.rs  os_integration.rs
(+39 files in other folders)
