[workspace]

[package]
name = "shodh-rag-app"
version = "0.1.0"
description = "Shodh-RAG Tauri App with Tree-sitter Intelligence"
authors = ["Roshera Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shodh_rag_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2.2"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-clipboard-manager = "2.0"
# tauri-plugin-updater = "2.0"  # Disabled until update server is configured
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
flate2 = "1.0"
base64 = "0.21"
parking_lot = "0.12"
regex = "1.0"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Document generation libraries
printpdf = "0.7"  # For PDF generation
lopdf = "0.31"    # For PDF manipulation
docx-rs = "0.4"   # For Word documents
rust_xlsxwriter = "0.60"  # For Excel files
csv = "1.3"       # For CSV files

# Include our RAG system
shodh-rag = { path = "../../shodh-rag" }

# File watching
notify = { version = "6.1", features = ["serde"] }
walkdir = "2.4"

# HTTP server for WhatsApp bridge and metrics
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }


# MCP Protocol (Model Context Protocol) for tool integrations
async-trait = "0.1"
futures = "0.3"
jsonrpc-core = "18"
jsonrpc-derive = "18"
dashmap = "5.5"

# Windows OCR
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage_Streams",
    "Globalization",
] }
image = "0.25"

# Google Drive integration
reqwest = { version = "0.11", features = ["json", "multipart"] }
oauth2 = "4.4"
url = "2.5"
urlencoding = "2.1"


